PCS BAckup 26Dec2023/Backup-Source/objects/Vision_Comment__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Phoenix_Contract__c</referenceTo>
        <relationshipLabel>Vision Comments</relationshipLabel>
        <relationshipName>Vision_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Vision Comments</relationshipLabel>
        <relationshipName>Vision_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vision Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vision Comments</relationshipLabel>
        <relationshipName>Vision_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vision Comment</label>
    <nameField>
        <label>Vision Comment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vision Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>